# verifybed

./: .gitignore  .gitmodules  README.md
acc_cpp/: fmtprt.cpp  makefile  practice1.cpp
bash/: cpmbr.sh  rdfile1.sh
c-cpp/: c11auto.cpp  c11features  c11features.cpp  checkmachineinfo.cpp  constmemfunc  constmemfunc.cpp  cpp_basics1.cpp  cpstrtochararray  cpstrtochararray.cpp  dftparm.cpp  findinmap.cpp  genrandom.cpp  getsystime  getsystime.cpp  inoutiterator  inoutiterator.cpp  iobasic.cpp  lvalue.cpp  machinfo  makefile  map_basic1.cpp  nrand  nrand.cpp  num_str  num_str.cpp  objincontainer.cpp  refaddr  refaddr.cpp  refofarr.cpp  rvsitr  rvsitr.cpp  rvsitr1  rvsitr1.cpp  smart_ptr.cpp  stdstream  stdstream.cpp  strlvalue.cpp  trf_meaning.c  versionstr  versionstr.cpp  (+1 more)
cmake-prj/: CMakeLists.txt  CMakelists.txt  Makefile  Tutorial  TutorialConfig.h.in  cmake_install.cmake  iotest.cpp  testnodefaultctor.cpp  tutorial.cxx
cmake-prj/MathFunctions/: CMakelists.txt  Makefile  cmake_install.cmake  mysqrt.cxx  smart_ptrtest.cpp
cmake-prj/asio/: Acceptor.h  CMakeLists.txt  asio_ssh2.cpp  async_srv1.cpp  async_tcp_srv_test.cpp  pwd.cpp  server.h  service.h  ssh_clt.cpp  ssh_clt.h  ssh_clt_base.cpp  ssh_clt_base.h  tcp_echo_client.cpp  tcp_echo_server.cpp  tcpclt.cpp  thread_test.cpp  timer.cpp
cmake-prj/fstream/: CMakeLists.txt  main.cpp
cmake-prj/hello/: CMakeLists.txt  main.cpp
cmake-prj/pgm_opts/: CMakeLists.txt  app.cpp  app.h  chmodcmd.cpp  chmodcmd.h  cmd.cpp  cmd.h  lscmd.cpp  lscmd.h  main.cpp  positional_opts.cpp
cmake-prj/random/: CMakeLists.txt  random.cpp
cmake-prj/smrtptr/: CMakeLists.txt  main.cpp
cmake-prj/test_boost/: CMakeLists.txt  main.cpp
cmake-prj/tokenizing/: CMakeLists.txt  main.cpp
cmake-prj/traveldir/: CMakeLists.txt  main.cpp
cmake-prj/variant/: CMakeLists.txt  main.cpp
gitapp/: CMakeLists.txt  gitapp.cpp  gitappconfig.h.in
gnumake/: auth.c  auth.h  makefile  s.txt
gradle-test/ibuilder-test/: build.gradle  settings.gradle
java/array-test/: .project  build.gradle  settings.gradle
java/array-test/src/main/java/: ArrayListTest.java
java/array-test/src/main/java/array/test/: App.java  ArrayListTest.java
java/array-test/src/test/java/array/test/: AppTest.java
java/readbinfile/: build.gradle  settings.gradle
java/readbinfile/src/main/java/readbinfile/: App.java
java/readbinfile/src/test/java/readbinfile/: AppTest.java
java/sftpupload/: build.gradle  settings.gradle
java/sftpupload/src/main/java/sftpupload/: App.java
java/sftpupload/src/test/java/sftpupload/: AppTest.java
sql/: gettask.sql
tests/: makefile  useiconv.cpp
